# export-pdf-tables

./: .gitignore  README.md  dev.sh  export.py  init.sh  main.py  pyproject.toml  run.sh  test.docx  write.py  wsgi.py
.sass-cache/985c876d36b877f5833ff309d240d08bd7022bda/: form.scssc  index.scssc  layout.scssc  report.scssc  theme.scssc
archive/: main.py  readme.md
samples/: readme.md
src/: app.py
src/assets/: app.css  app.css.map  app.js
src/scss/: form.scss  index.scss  layout.scss
src/templates/: index.html
tables/: descriptor-basic.json  descriptor-full.json  descriptor.json  readme.md
tables/csv/test2/: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv
tables/csv/test4/: 0.csv
tables/docx/test2/: 0.docx
tables/docx/test4/: .~lock.0.docx#  0.docx
